[project]
name = "lsst-butler-transform"
version = "0.1.0"
requires-python = "~= 3.13.0"
dependencies = [
    "anyio",
    "lsst-daf-butler",
    "pyarrow",
    "rich>=15.0.0",
]

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "lsst"
module-root = "python"

[tool.uv.sources]
lsst-daf-butler = { git = "https://github.com/lsst/daf_butler" }

[dependency-groups]
dev = [
    "mypy",
    "pytest",
]


# Pytest configuration required to prevent pytest from looking for
# configurations in parent directories. Can be empty.
[tool.pytest]

[tool.ruff]
line-length = 110
target-version = "py314"
exclude = [
    "doc/"
]

[tool.ruff.lint]
extend-select = ["I"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["lsst"]

[tool.ruff.lint.pycodestyle]
max-doc-length = 79

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.format]
docstring-code-format = true
# Formatter does not know about indenting.
docstring-code-line-length = 69

[tool.lsst_versions]
write_to = "python/lsst/butler_transform/version.py"

[tool.mypy]
files = ["python", "tests"]
plugins = "pydantic.mypy"

[[tool.mypy.overrides]]
module = [
    "pyarrow.*"
]
ignore_missing_imports = true
